--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.14.1",
     "sharp": "^0.34.3"
+  },
+  "devDependencies": {
+    "sass": "^1.93.2"
   }
 }
